packages/scss/src/components/fieldset/mods.scss
@use '@lucca-front/scss/src/commons/utils/a11y';
@use '@lucca-front/scss/src/components/button/exports' as button;

@mixin S {
	--components-fieldset-title: var(--pr-t-font-heading-4);
}

@mixin horizontal {
	grid-template-columns: 1fr auto;

	--components-form-maxWidth: initial;
}

@mixin expandable {
	.fieldset-title-content {
		border-radius: var(--pr-t-border-radius-default);
		cursor: pointer;
		font: inherit;

		&:focus-visible {
			@include a11y.focusVisible;
		}

		.lucca-icon {
			margin-block-start: var(--pr-t-spacings-50);
		}
	}
}

@mixin withAction {
	.fieldset-title-content-action {
		.button {
			@include button.outlined;
			@include button.S;
		}
	}
}

@mixin narrow {
	--components-fieldset-title-content-flexWrap: wrap;
}

